@@ -1,5 +1,8 @@
 2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/devel/packaging.html: Indent region.  Update.  Fix Debian
+	and Fedora (previously: Red Hat) build instructions.
+
 	* site/about/thanks.html (href): 
 	* site/about/screenshots.html (href): 
 	* site/about/faq.html (Han-Wen): Update documentation links to v2.4.
